agregar la seccion de video en el proyecto

--- a/index.html
+++ b/index.html
@@ -73,7 +73,16 @@
       </nav>
     </div>
 
-  </div>
+  </div><!--.barra-->
+  <section class="seccion contenedor">
+    <h2>la mejor conferencia de diseño web en español</h2>
+    
+    <p>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam nesciunt ratione ab, harum laborum eius asperiores consequuntur dignissimos magni! Vel provident voluptates fugit non aliquam quaerat eligendi cupiditate quam aliquid.
+    </p>
+
+  </section>
+
 
 
 
