punto de inicio a la prueba con grid

--- a/index.html
+++ b/index.html
@@ -73,16 +73,88 @@
       </nav>
     </div>
 
-  </div><!--.barra-->
+  </div>
+  <!--.barra-->
   <section class="seccion contenedor">
     <h2>la mejor conferencia de diseño web en español</h2>
-    
+
     <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam nesciunt ratione ab, harum laborum eius asperiores consequuntur dignissimos magni! Vel provident voluptates fugit non aliquam quaerat eligendi cupiditate quam aliquid.
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam nesciunt ratione ab, harum laborum eius
+      asperiores consequuntur dignissimos magni! Vel provident voluptates fugit non aliquam quaerat eligendi cupiditate
+      quam aliquid.
     </p>
 
   </section>
+  <!--.seccion-->
 
+  <section class="programa">
+    <!--asi es que se agregan videos de fondo en el html-->
+    <div class="contenedor-video">
+
+      <video autoplay loop poster="img/bg-talleres.jpg">
+
+        <source src="video/video.mp4" type="video/mp4">
+        <source src="video/video.webm" type="video/webm">
+        <source src="video/video.ogv" type="video/ogv">
+
+      </video>
+      <!--este es el cierre del codigo para agregar videos-->
+    </div><!-- .contenedor-videos -->
+
+    <div class="contenido-programa">
+
+      <div class="contenedor">
+        <div class="programa-evento">
+          <h2>programa del evento</h2>
+          <nav class="menu-programa">
+            <a href="#talleres"><i class="fas fa-code"></i>Talleres</a>
+            <a href=""><i class="fas fa-comments"></i>Conferencias</a>
+            <a href=""><i class="fas fa-university"></i>Seminarios</a>
+          </nav>
+
+          <div id="talleres" class="info-curso ocultar clearfix">
+            <div class="detalle-evento">
+              <h3>HTML5, CSS3 Y JavaScript</h3>
+              <p><i class="far fa-clock"></i> 2:00PM</p>
+              <p><i class="fas fa-calendar-alt"></i>20 de May</p>
+              <p><i class="fas fa-user"></i>Yeison Quiroz Reyes</p>
+            </div>
+
+            <div class="detalle-evento">
+              <h3>Responsive web design</h3>
+              <p><i class="far fa-clock"></i> 4:00PM</p>
+              <p><i class="fas fa-calendar-alt"></i>20 de May</p>
+              <p><i class="fas fa-user"></i>Yeison Quiroz Reyes</p>
+            </div>
+            <a href="" class="boton float-right">Ver todos</a>
+
+          </div>
+          <!--.cierre bloque talleres-->
+
+        </div>
+        <!--cierre bloque programa evento-->
+
+      </div>
+
+    </div>
+    <!--.contenido programa-->
+  </section>
+  <!--.programa-->
+
+  <section class="contenedor seccion invitados">
+    <h2>nuestros Invitados</h2>
+    <ul class="lista-invitados clearfix">
+      <li>
+        <div class="invitado">
+          <img src="img/invitado1.jpg" alt="imagen invitado 1">
+
+        </div>
+
+      </li>
+
+    </ul>
+
+  </section>
 
 
 
