prueba de precios con flex, punto de inicio

--- a/index.html
+++ b/index.html
@@ -143,16 +143,102 @@
 
   <section class="contenedor seccion invitados">
     <h2>nuestros Invitados</h2>
-    <ul class="lista-invitados clearfix">
-      <li>
-        <div class="invitado">
-          <img src="img/invitado1.jpg" alt="imagen invitado 1">
+
+    <div class="lista-invitados">
+
+      <div class="invitado">
+        <img src="img/invitado1.jpg" alt="imagen invitado 1">
+        <p>rafael bautista</p>
+      </div>
+      <div class="invitado">
+        <img src="img/invitado2.jpg" alt="imagen invitado 2">
+        <p>shari herrera</p>
+      </div>
+      <div class="invitado">
+        <img src="img/invitado3.jpg" alt="imagen invitado 3">
+        <p>gregorio sanchez</p>
+      </div>
+      <div class="invitado">
+        <img src="img/invitado4.jpg" alt="imagen invitado 4">
+        <p>susana rivera</p>
+      </div>
+      <div class="invitado">
+        <img src="img/invitado5.jpg" alt="imagen invitado 5">
+        <p>harold garcia</p>
+      </div>
+      <div class="invitado">
+        <img src="img/invitado6.jpg" alt="imagen invitado 6">
+        <p>susan sanchez</p>
+      </div>
+
+    </div>
+  </section>
+
+  <div class="contador parallax">
+    <div class="contenedor">
+      <ul class="resumen-evento clearfix">
+        <li>
+          <p class="numero">6</p>Invitados
+        </li>
+        <li>
+          <p class="numero">15</p>Talleres
+        </li>
+        <li>
+          <p class="numero">3</p>Dias
+        </li>
+        <li>
+          <p class="numero">6</p>Conferencias
+        </li>
+      </ul>
+    </div>
+
+  </div>
+
+  <section class="seccion precios">
+    <h2>Precios</h2>
+    <div class="contenedor">
+      <ul class="lista-precios clearfix">
+        
+        <li class="lista-precios">
+
+          <div class="tabla-precios">
+            <h3>Pase por Dia</h3>
+            <p class="numero">$30</p>
+            <ul>
+              <li>Bocadillos Gratis</li>
+              <li>Todas las Conferencias</li>
+              <li>Todos los talleres</li>
+            </ul>
+            <a href="" class="boton hollow">Comprar</a>
+
+          </div>
+        </li>
+        <div class="tabla-precios">
+          <h3>Todos los Dias</h3>
+          <p class="numero">$50</p>
+          <ul>
+            <li>Bocadillos Gratis</li>
+            <li>Todas las Conferencias</li>
+            <li>Todos los talleres</li>
+          </ul>
+          <a href="" class="boton">Comprar</a>
 
         </div>
+        </li>
+        <div class="tabla-precios">
+          <h3>Pase por 2 Dias</h3>
+          <p class="numero">$45</p>
+          <ul>
+            <li>Bocadillos Gratis</li>
+            <li>Todas las Conferencias</li>
+            <li>Todos los talleres</li>
+          </ul>
+          <a href="" class="boton hollow">Comprar</a>
 
-      </li>
-
-    </ul>
+        </div>
+        </li>
+      </ul>
+    </div>
 
   </section>
 
