--- a/index.html
+++ b/index.html
@@ -197,9 +197,10 @@
   <section class="seccion precios">
     <h2>Precios</h2>
     <div class="contenedor">
+
       <ul class="lista-precios clearfix">
-        
-        <li class="lista-precios">
+
+        <li>
 
           <div class="tabla-precios">
             <h3>Pase por Dia</h3>
@@ -213,34 +214,160 @@
 
           </div>
         </li>
-        <div class="tabla-precios">
-          <h3>Todos los Dias</h3>
-          <p class="numero">$50</p>
-          <ul>
-            <li>Bocadillos Gratis</li>
-            <li>Todas las Conferencias</li>
-            <li>Todos los talleres</li>
-          </ul>
-          <a href="" class="boton">Comprar</a>
 
-        </div>
-        </li>
-        <div class="tabla-precios">
-          <h3>Pase por 2 Dias</h3>
-          <p class="numero">$45</p>
-          <ul>
-            <li>Bocadillos Gratis</li>
-            <li>Todas las Conferencias</li>
-            <li>Todos los talleres</li>
-          </ul>
-          <a href="" class="boton hollow">Comprar</a>
+        <li>
+          <div class="tabla-precios">
+            <h3>Todos los Dias</h3>
+            <p class="numero">$50</p>
+            <ul>
+              <li>Bocadillos Gratis</li>
+              <li>Todas las Conferencias</li>
+              <li>Todos los talleres</li>
+            </ul>
+            <a href="" class="boton">Comprar</a>
 
-        </div>
+          </div>
         </li>
+
+        <li>
+          <div class="tabla-precios">
+            <h3>Pase por 2 Dias</h3>
+            <p class="numero">$45</p>
+            <ul>
+              <li>Bocadillos Gratis</li>
+              <li>Todas las Conferencias</li>
+              <li>Todos los talleres</li>
+            </ul>
+            <a href="" class="boton hollow">Comprar</a>
+
+          </div>
+        </li>
+
       </ul>
     </div>
 
   </section>
+
+  <div id="mapa" class="mapa">
+  </div>
+
+
+  <section class="seccion">
+    <h2>Testimoniales</h2>
+
+    <div class="testimoniales contenedor clearfix">
+      <div class="testimonial">
+        <blockquote>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum ex repudiandae quis quo inventore suscipit
+            laborum, ad neque a commodi impedit aliquid esse repellendus ut qui porro? Voluptas, harum velit.</p>
+
+          <footer class="info-testimonial clearfix">
+            <img src="img/testimonial.jpg" alt="imagen testimonial">
+            <cite>Oswaldo Aponte Escobedo<span> Diseñador Web @yeison</span></cite>
+
+          </footer>
+
+        </blockquote>
+      </div>
+      <div class="testimonial">
+        <blockquote>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum ex repudiandae quis quo inventore suscipit
+            laborum, ad neque a commodi impedit aliquid esse repellendus ut qui porro? Voluptas, harum velit.</p>
+          <footer class="info-testimonial clearfix">
+            <img src="img/testimonial.jpg" alt="imagen testimonial">
+            <cite>Oswaldo Aponte Escobedo<span> Diseñador Web @yeison</span></cite>
+
+          </footer>
+
+        </blockquote>
+      </div>
+
+      <div class="testimonial">
+        <blockquote>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum ex repudiandae quis quo inventore suscipit
+            laborum, ad neque a commodi impedit aliquid esse repellendus ut qui porro? Voluptas, harum velit.</p>
+          <footer class="info-testimonial clearfix">
+            <img src="img/testimonial.jpg" alt="imagen testimonial">
+            <cite>Oswaldo Aponte Escobedo<span> Diseñador Web @yeison</span></cite>
+
+          </footer>
+
+        </blockquote>
+      </div>
+
+    </div>
+  </section>
+
+  <div class="newsletter parallax">
+    <div class="contenido contenedor">
+      <p>Registrate a newsletter: </p>
+      <h3>GDLWEBCAMP</h3>
+      <a href="#" class="boton transparente">Registro</a>
+    </div>
+    <!--cierrec contenido-->
+  </div>
+  <!--cierre newsletter-->
+
+  <section class="seccion">
+    <h2>Faltan</h2>
+    <div class="contenedor">
+      <div class="cuenta-regresiva">
+        <ul class="clearfix">
+          <li>
+            <p class="numero">80</p>Días
+          </li>
+          <li>
+            <p class="numero">15</p>Horas
+          </li>
+          <li>
+            <p class="numero">5</p>Minutos
+          </li>
+          <li>
+            <p class="numero">30</p>Segundos
+          </li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
+  <footer class="site-footer">
+    <div class="contenedor clearfix">
+
+      <div class="footer-informacion">
+        <h3>Sobre<span> GdlWebCamp</span></h3>
+        <P>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque atque fuga ab repellat iure, qui nostrum,
+          ducimus nam asperiores nemo itaque dolorum quae! Odio libero eveniet voluptas ratione, amet saepe.
+        </P>
+      </div>
+
+      <div class="ultimos-tweets">
+        <h3>últimos<span> tweets</span></h3>
+        <ul>
+          <li> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque atque fuga ab repellat iure.</li>
+          <li> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque atque fuga ab repellat iure.</li>
+          <li> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque atque fuga ab repellat iure.</li>
+        </ul>
+
+      </div>
+
+      <div class="menu">
+        <h3>redes<span> sociales</span></h3>
+        <nav class="redes-sociales">
+          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-pinterest-p"></i></a>
+          <a href="#"><i class="fab fa-youtube"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+        </nav>
+      </div>
+
+    </div>
+  </footer>
+
+  <p class="copyright">
+    Todos los Derechos Reservados 2020 YeisonQr.
+  </p>
 
 
 
