finish page of register

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Oswald&family=PT+Sans&display=swap"
     rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" />
   <link rel="stylesheet" href="css/main.css">
 
   <meta name="theme-color" content="#fafafa">
@@ -45,7 +46,7 @@
             <p class="ciudad"><i class="fas fa-map-marker-alt"></i>Cartagena, Co</p>
           </div>
 
-          <h1 class="nombre-sitio">GdlWebCamp</h1>
+          <a href="index.html"><h1 class="nombre-sitio">GdlWebCamp</h1></a>
           <p class="slogan">La mejor conferencia de <span>Diseño Web</span></p>
         </div>
         <!--.informacion-evento-->
@@ -378,6 +379,7 @@
     window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')
   </script>
   <script src="js/plugins.js"></script>
+  <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
   <script src="js/main.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
