--- a/registro.html
+++ b/registro.html
@@ -46,7 +46,7 @@
                         <p class="ciudad"><i class="fas fa-map-marker-alt"></i>Cartagena, Co</p>
                     </div>
 
-                    <h1 class="nombre-sitio">GdlWebCamp</h1>
+                    <a href="index.html"><h1 class="nombre-sitio">GdlWebCamp</h1></a>
                     <p class="slogan">La mejor conferencia de <span>Diseño Web</span></p>
                 </div>
                 <!--.informacion-evento-->
@@ -81,7 +81,7 @@
     <section class="seccion contenido">
         <h2>Registro De Usuarios</h2>
 
-        <form id="registro" class="registro contenedor" method="POST">
+        <form id="registro" class="registro contenedor" method="POST" autocomplete="off">
 
             <div id="datos_usuarios" class="registro caja clearfix ">
 
@@ -106,7 +106,7 @@
             <!--Final Datos usuario-->
 
             <div id="paquetes" class="paquetes">
-                <h3>elige el Número de boletos</h3>
+                <h3 class="clearpd">elige el Número de boletos</h3>
 
                 <ul class="lista-precios clearfix">
 
@@ -165,6 +165,7 @@
             <div id="eventos" class="eventos clearfix">
                 <h3>Elige tus talleres</h3>
                 <div class="caja">
+
                     <div id="viernes" class="contenido-dia clearfix">
                         <h4>Viernes</h4>
                         <div>
@@ -196,6 +197,7 @@
                         </div>
                     </div>
                     <!--#viernes-->
+
                     <div id="sabado" class="contenido-dia clearfix">
                         <h4>Sábado</h4>
                         <div>
@@ -233,6 +235,7 @@
                         </div>
                     </div>
                     <!--#sabado-->
+
                     <div id="domingo" class="contenido-dia clearfix">
                         <h4>Domingo</h4>
                         <div>
@@ -278,7 +281,7 @@
 
                     <div class="extras">
                         <div class="orden">
-                            <label for="camisa_evento">Camisa Del evento $10 <small>(promocion 7% dto.)</small></label>
+                            <label for="camisa_evento">Camisa Del evento $10 <small>(promocion 7% dto.)</small></label><br>
                             <input type="number" id="camisa_evento" min="0" size="3" placeholder="0">
                         </div>
                         <!--cierre bloque orden-->
@@ -291,7 +294,7 @@
                         <!--cierre bloque orden-->
 
                         <div class="orden">
-                            <label for="regalo">Seleccione un Regalo</label>
+                            <label for="regalo">Seleccione un Regalo</label><br>
                             <select id="regalo" required>
                                 <option value="">--Seleccione un Regalo</option>
                                 <option value="eti">Etiquetas</option>
@@ -316,11 +319,14 @@
 
                         </div>
                         <input type="submit" value="Pagar" id="btnRegistro" class="boton">
-                    </div><!--Cierre total-->
+                    </div>
+                    <!--Cierre total-->
 
-                </div><!--Cierre caja-->
+                </div>
+                <!--Cierre caja-->
 
-            </div><!--Cierre resumen-->
+            </div>
+            <!--Cierre resumen-->
 
 
         </form>
