--- a/registro.html
+++ b/registro.html
@@ -15,6 +15,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Oswald&family=PT+Sans&display=swap"
         rel="stylesheet">
+
     <link rel="stylesheet" href="css/main.css">
 
     <meta name="theme-color" content="#fafafa">
@@ -46,7 +47,9 @@
                         <p class="ciudad"><i class="fas fa-map-marker-alt"></i>Cartagena, Co</p>
                     </div>
 
-                    <a href="index.html"><h1 class="nombre-sitio">GdlWebCamp</h1></a>
+                    <a href="index.html">
+                        <h1 class="nombre-sitio">GdlWebCamp</h1>
+                    </a>
                     <p class="slogan">La mejor conferencia de <span>Diseño Web</span></p>
                 </div>
                 <!--.informacion-evento-->
@@ -281,7 +284,8 @@
 
                     <div class="extras">
                         <div class="orden">
-                            <label for="camisa_evento">Camisa Del evento $10 <small>(promocion 7% dto.)</small></label><br>
+                            <label for="camisa_evento">Camisa Del evento $10 <small>(promocion 7%
+                                    dto.)</small></label><br>
                             <input type="number" id="camisa_evento" min="0" size="3" placeholder="0">
                         </div>
                         <!--cierre bloque orden-->
@@ -385,6 +389,7 @@
         window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')
     </script>
     <script src="js/plugins.js"></script>
+    
     <script src="js/main.js"></script>
 
     <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
