create page conference

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Oswald&family=PT+Sans&display=swap"
     rel="stylesheet" />
 
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" />
-    
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" />
+
 
 
   <link rel="stylesheet" href="css/main.css">
@@ -175,7 +175,7 @@
 
           </div>
           <!--Cierre bloque seminarios-->
-          
+
 
         </div>
         <!--cierre bloque programa evento-->
@@ -224,16 +224,16 @@
     <div class="contenedor">
       <ul class="resumen-evento clearfix">
         <li>
-          <p class="numero">6</p>Invitados
+          <p class="numero"></p>Invitados
         </li>
         <li>
-          <p class="numero">15</p>Talleres
+          <p class="numero"></p>Talleres
         </li>
         <li>
-          <p class="numero">3</p>Dias
+          <p class="numero"></p>Dias
         </li>
         <li>
-          <p class="numero">6</p>Conferencias
+          <p class="numero"></p>Conferencia
         </li>
       </ul>
     </div>
@@ -360,16 +360,16 @@
       <div class="cuenta-regresiva">
         <ul class="clearfix">
           <li>
-            <p class="numero">80</p>Días
+            <p id="dias" class="numero"></p>Días
           </li>
           <li>
-            <p class="numero">15</p>Horas
+            <p id="horas" class="numero"></p>Horas
           </li>
           <li>
-            <p class="numero">5</p>Minutos
+            <p id="minutos" class="numero"></p>Minutos
           </li>
           <li>
-            <p class="numero">30</p>Segundos
+            <p id="segundos" class="numero"></p>Segundos
           </li>
         </ul>
       </div>
@@ -424,6 +424,9 @@
     window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')
   </script>
   <script src="js/plugins.js"></script>
+  <script src="js/jquery.animateNumber.js"></script>
+  <script src="js/jquery.countdown.js"></script>
+  <script src="js/jquery.lettering.js"></script>
 
   <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
   <script src="js/main.js"> </script>
